--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,12 @@ readme = "README.md"
 python = "^3.11"
 streamlit = "^1.44.1"
 matplotlib = "^3.10.1"
-langchain = "^0.3.23"
+fastapi = "^0.115.12"
+langchain-community = "^0.3.21"
+uvicorn = "^0.34.0"
+langchain-openai = "^0.3.12"
+langchain-google-genai = "^2.1.2"
+psycopg2 = "^2.9.10"
 
 [build-system]
 requires = ["poetry-core"]
