--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ uvicorn = "^0.34.0"
 langchain-openai = "^0.3.12"
 langchain-google-genai = "^2.1.2"
 psycopg2 = "^2.9.10"
+nltk = "^3.9.1"
 
 [build-system]
 requires = ["poetry-core"]
