--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     container_name: postgres_db
     networks:
       my_custom_network:
-        ipv4_address: 172.19.0.4
+        ipv4_address: 172.20.0.4
     environment:
-      POSTGRES_USER: bojjoo
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 12345678
       POSTGRES_DB: Educonnect
     ports:
@@ -14,39 +14,50 @@ services:
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - ./pgdata/data:/var/lib/postgresql/data  # Volume để lưu trữ database PostgreSQL
+      - ./insert_test_data.sql:/docker-entrypoint-initdb.d/insert_test_data.sql
 
   fastapi:
     build: .
-    container_name: fastapi_app
+    container_name: educonnect_fastapi
     networks:
       my_custom_network:
-        ipv4_address: 172.19.0.5
+        ipv4_address: 172.20.0.5
     ports:
-      - "9000:9000"
+      - "8000:8000"
     volumes:
       - .:/app
     environment:
       - ENV=development
     depends_on:
       - postgres
+    restart: on-failure
 
 
-  nginx:
-    image: nginx:latest
-    container_name: demo_nginx_gpt
-    networks:
-      my_custom_network:
-        ipv4_address: 172.19.0.2
+#  nginx:
+#    image: nginx:latest
+#    container_name: demo_nginx_gpt
+#    networks:
+#      my_custom_network:
+#        ipv4_address: 172.20.0.2
+#    ports:
+#      - "80:80"
+#    depends_on:
+#      - fastapi
+#    volumes:
+#      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+
+  frontend:
+    build:
+      context: .
+      dockerfile: dockerfile.frontend
+    container_name: frontend
     ports:
-      - "90:90"
-    depends_on:
-      - fastapi
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - "80:80"
+
 
 networks:
   my_custom_network:
     driver: bridge
     ipam:
       config:
-        - subnet: 172.19.0.0/24
+        - subnet: 172.20.0.0/24
