--- a/dockerfile.frontend
+++ b/dockerfile.frontend
@@ -1,5 +1,7 @@
 # Dockerfile.frontend
 FROM nginx:alpine
+EXPOSE 80
 
 COPY ./frontend /usr/share/nginx/html
-EXPOSE 80
+
+COPY ./frontend/nginx.conf /etc/nginx/conf.d/default.conf
