add network for nginx, fix nginx config and endpoints

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,7 +12,7 @@ server {
 
     # Nếu frontend gọi API thì proxy sang backend FastAPI
     location /api/ {
-        proxy_pass http://172.20.0.5:8000/;
+        proxy_pass http://educonnect_fastapi:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
