--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,21 @@ services:
       - ./pgdata/data:/var/lib/postgresql/data  # Volume để lưu trữ database PostgreSQL
       - ./insert_test_data.sql:/docker-entrypoint-initdb.d/insert_test_data.sql
 
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    networks:
+      my_custom_network:
+        ipv4_address: 172.20.0.6
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@educonnect.com  # Email đăng nhập pgAdmin
+      PGADMIN_DEFAULT_PASSWORD: admin123           # Mật khẩu đăng nhập pgAdmin
+    ports:
+      - "5050:80"  # Truy cập pgAdmin qua http://localhost:5050
+    depends_on:
+      - postgres
+
   fastapi:
     build:
       context: .
@@ -40,7 +55,7 @@ services:
       dockerfile: dockerfile.frontend
     container_name: frontend
     ports:
-      - "80:80"
+      - "8080:80"
     networks:
       - my_custom_network
     restart: on-failure
