--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ langchain-google-genai = "^2.1.2"
 psycopg2 = "^2.9.10"
 nltk = "^3.9.1"
 python-dotenv = "^1.1.0"
+pydantic = {extras = ["email"], version = "^2.11.7"}
+email-validator = "2.2.0"
 
 [build-system]
 requires = ["poetry-core"]
