add cerbot service into docker compose: make http -> https

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "9999:5432"
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-      - ./pgdata/data:/var/lib/postgresql/data  # Volume để lưu trữ database PostgreSQL
+      - ./pgdata/data:/var/lib/postgresql/data # Volume để lưu trữ database PostgreSQL
       - ./insert_test_data.sql:/docker-entrypoint-initdb.d/insert_test_data.sql
 
   fastapi:
@@ -41,10 +41,25 @@ services:
     container_name: frontend
     ports:
       - "80:80"
+      - "443:443" # Thêm cổng 443 cho HTTPS
     networks:
       - my_custom_network
     restart: on-failure
+    volumes: # Thêm volume để Nginx có thể truy cập chứng chỉ
+      - ./nginx-certs:/etc/nginx/certs
+      - ./frontend:/usr/share/nginx/html # Đảm bảo frontend vẫn được copy
 
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./nginx-certs:/etc/letsencrypt # Nơi Certbot lưu trữ chứng chỉ
+      - ./nginx-data:/var/www/certbot # Để Certbot xác minh quyền sở hữu domain
+    command: certonly --webroot --webroot-path=/var/www/certbot --email superappolo@gmail.com --agree-tos --no-eff-email -d educonnect.id.vn
+    networks:
+      - my_custom_network
+    depends_on:
+      - frontend # Certbot cần frontend chạy để xác minh
 
 networks:
   my_custom_network:
