--- a/dockerfile.frontend
+++ b/dockerfile.frontend
@@ -1,7 +1,14 @@
 # Dockerfile.frontend
 FROM nginx:alpine
-EXPOSE 80
+EXPOSE 80 443
+
+# Tạo thư mục cho các file xác minh của certbot
+RUN mkdir -p /var/www/certbot
 
 COPY ./frontend /usr/share/nginx/html
 
+# Sao chép cấu hình nginx mới
 COPY ./frontend/nginx.conf /etc/nginx/conf.d/default.conf
+
+# Sao chép chứng chỉ nếu đã có (cho lần chạy sau)
+# COPY ./nginx-certs /etc/nginx/certs
