--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,21 +45,21 @@ services:
     networks:
       - my_custom_network
     restart: on-failure
-
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin
-    networks:
-      my_custom_network:
-        ipv4_address: 172.20.0.6
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@educonnect.com  # Email đăng nhập pgAdmin
-      PGADMIN_DEFAULT_PASSWORD: admin123           # Mật khẩu đăng nhập pgAdmin
-    ports:
-      - "5050:80"  # Truy cập pgAdmin qua http://localhost:5050
-    depends_on:
-      - postgres
-
+#
+#  pgadmin:
+#    image: dpage/pgadmin4
+#    container_name: pgadmin
+#    networks:
+#      my_custom_network:
+#        ipv4_address: 172.20.0.6
+#    environment:
+#      PGADMIN_DEFAULT_EMAIL: admin@educonnect.com
+#      PGADMIN_DEFAULT_PASSWORD: admin123
+#    ports:
+#      - "5050:80"
+#    depends_on:
+#      - postgres
+#
 
 networks:
   my_custom_network:
