--- a/dockerfile.frontend
+++ b/dockerfile.frontend
@@ -8,7 +8,8 @@ RUN mkdir -p /var/www/certbot
 COPY ./frontend /usr/share/nginx/html
 
 # Sao chép cấu hình nginx mới
-COPY ./frontend/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./frontend/nginx-initial.conf /etc/nginx/conf.d/default.conf
+#COPY ./frontend/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Sao chép chứng chỉ nếu đã có (cho lần chạy sau)
 # COPY ./nginx-certs /etc/nginx/certs
