--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,22 +45,22 @@ services:
     networks:
       - my_custom_network
     restart: on-failure
-    volumes: # Thêm volume để Nginx có thể truy cập chứng chỉ
-      - ./nginx-certs:/etc/nginx/certs
-      - ./frontend:/usr/share/nginx/html # Đảm bảo frontend vẫn được copy
-      - ./nginx-data:/var/www/certbot
+#    volumes: # Thêm volume để Nginx có thể truy cập chứng chỉ
+#      - ./nginx-certs:/etc/nginx/certs
+#      - ./frontend:/usr/share/nginx/html # Đảm bảo frontend vẫn được copy
+#      - ./nginx-data:/var/www/certbot
 
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
-    volumes:
-      - ./nginx-certs:/etc/letsencrypt # Nơi Certbot lưu trữ chứng chỉ
-      - ./nginx-data:/var/www/certbot # Để Certbot xác minh quyền sở hữu domain
-    command: certonly --webroot --webroot-path=/var/www/certbot --email superappolo@gmail.com --agree-tos --no-eff-email -d educonnect.id.vn
-    networks:
-      - my_custom_network
-    depends_on:
-      - frontend # Certbot cần frontend chạy để xác minh
+#  certbot:
+#    image: certbot/certbot
+#    container_name: certbot
+#    volumes:
+#      - ./nginx-certs:/etc/letsencrypt # Nơi Certbot lưu trữ chứng chỉ
+#      - ./nginx-data:/var/www/certbot # Để Certbot xác minh quyền sở hữu domain
+#    command: certonly --webroot --webroot-path=/var/www/certbot --email superappolo@gmail.com --agree-tos --no-eff-email -d educonnect.id.vn
+#    networks:
+#      - my_custom_network
+#    depends_on:
+#      - frontend # Certbot cần frontend chạy để xác minh
 
 networks:
   my_custom_network:
