--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -44,4 +44,36 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    location /ws/ {
+        proxy_pass http://educonnect_fastapi:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
+
+# # chạy local, ko phải deploy
+# server {
+#     listen 80;
+#     server_name _;
+
+#     root /usr/share/nginx/html;
+#     index login.html;
+
+#     # Phục vụ file tĩnh
+#     location / {
+#         try_files $uri $uri.html $uri/ =404;
+#     }
+
+#     # Nếu frontend gọi API thì proxy sang backend FastAPI
+#     location /api/ {
+#         proxy_pass http://educonnect_fastapi:8000/;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#     }
+# }
