--- a/dockerfile.frontend
+++ b/dockerfile.frontend
@@ -12,4 +12,4 @@ COPY ./frontend /usr/share/nginx/html
 COPY ./frontend/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Sao chép chứng chỉ nếu đã có (cho lần chạy sau)
-# COPY ./nginx-certs /etc/nginx/certs
+COPY ./nginx-certs /etc/nginx/certs
